Pptimize: Clean up junky file

--- a/frontend/src/components/Subheader/Subheader.css
+++ b/frontend/src/components/Subheader/Subheader.css
@@ -1,7 +1,7 @@
 .sub-header {
   height: 30vh; /* Adjust height as needed */
   width: 100%;
-  background-color: #00BFFF; /* Use bright blue as the background */
+  background-color:  #3686FF; /* Use bright blue as the background */
   text-align: center;
   color: #fff; /* White text color */
   display: flex; /* Use flexbox for centering */
